cleaning up interface for modal dialog (vex)... easier to sort that way now

--- a/web/css/style.css
+++ b/web/css/style.css
@@ -104,6 +104,17 @@ IMG.centered {
     margin-right: auto 
 }
 
+#position input[type="text"] {
+    border: none;
+    border-bottom: solid 2px #c9c9c9;
+    transition: border 0.3s;
+    width: 100px;
+}
+#position input[type="text"]:focus, 
+#position input[type="text"].focus {
+    border-bottom: solid 2px #969696;
+}
+
 #question {
     text-align: left;
 }
