--- a/web/css/vex-theme-wireframe.css
+++ b/web/css/vex-theme-wireframe.css
@@ -69,7 +69,7 @@
     box-shadow: inset 0 0 0 300px transparent; } }
 
 .vex.vex-theme-wireframe {
-  padding-top: 160px;
+  padding-top: 10px;
   padding-bottom: 160px; }
   .vex.vex-theme-wireframe .vex-overlay {
     background: rgba(255, 255, 255, 0.4); }
@@ -78,11 +78,11 @@
     background: #fff;
     color: #000;
     border: 2px solid #000;
-    padding: 2em;
+    padding: .2em 2em 2em 2em;
     position: relative;
     margin: 0 auto;
     max-width: 100%;
-    width: 400px;
+    width: 80%;
     font-size: 1.1em;
     line-height: 1.5em; }
     .vex.vex-theme-wireframe .vex-content h1, .vex.vex-theme-wireframe .vex-content h2, .vex.vex-theme-wireframe .vex-content h3, .vex.vex-theme-wireframe .vex-content h4, .vex.vex-theme-wireframe .vex-content h5, .vex.vex-theme-wireframe .vex-content h6, .vex.vex-theme-wireframe .vex-content p, .vex.vex-theme-wireframe .vex-content ul, .vex.vex-theme-wireframe .vex-content li {
