--- a/backend/css/style.css
+++ b/backend/css/style.css
@@ -16,6 +16,7 @@ body {
 }
 
 .content {
+    object-fit: cover;
     position: relative;
     text-align: left;
     display: inline-block;
@@ -88,11 +89,11 @@ body {
     text-align:center;
 }
 
-.center { 
+.center {
     text-align: center;
 }
 
-table.center { 
+table.center {
     margin-left: auto;
     margin-right: auto;
     text-align: left;
@@ -101,7 +102,7 @@ table.center {
 IMG.centered {
     display: block;
     margin-left: auto;
-    margin-right: auto 
+    margin-right: auto
 }
 
 #position input[type="text"] {
@@ -110,7 +111,7 @@ IMG.centered {
     transition: border 0.3s;
     width: 100px;
 }
-#position input[type="text"]:focus, 
+#position input[type="text"]:focus,
 #position input[type="text"].focus {
     border-bottom: solid 2px #969696;
 }
@@ -130,7 +131,7 @@ div.row span.right {
     float: right;
 }
 
-div.centered { 
+div.centered {
     margin-left: auto;
     margin-right: auto;
 }
@@ -147,13 +148,13 @@ span.calendar {
 }
 
 a:link	{
-    padding: 0px 0px; 
-    margin:0; 
+    padding: 0px 0px;
+    margin:0;
 }
 
 a:visited {
-    padding: 0px 0px; 
-    margin:0; 
+    padding: 0px 0px;
+    margin:0;
 }
 
 
@@ -167,24 +168,24 @@ a:visited {
       */
     line-height: 2em;
     width: 100%;
-    text-align:center; 
+    text-align:center;
 }
 
-.nav ul { 
-    padding:5px; 
-    margin:0; 
-    padding:0; 
-} 
+.nav ul {
+    padding:5px;
+    margin:0;
+    padding:0;
+}
 
-.nav ul li { 
-    float:left; 
-    list-style:none; 
-    margin:0; 
-} 
+.nav ul li {
+    float:left;
+    list-style:none;
+    margin:0;
+}
 
 a.nav:link, a.nav:visited	{
-    padding: 2px 15px; 
-    margin:0; 
+    padding: 2px 15px;
+    margin:0;
     color: #8C6838;
     text-decoration: none;
 }
@@ -202,7 +203,7 @@ a.nav:hover	{
     margin-right: auto;
     text-align:center;
     padding: 2px;
-    margin: auto; 
+    margin: auto;
     border-top: 1px solid #EFE9ED;
     font-size: 11;
     /*font-size: 0.8em;*/
